# auto_mp3

./: README.md  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
torrent-checker/: README.md  __init__.py  config.py  lame.py  main.py  orpheus.py  qbittorrent.py
